v2.4.0beta4 "Chimera" (2017-Dec-XY)
-----------------------------------
* Attention: We move to Java 9. Compatibility to older Java releases is not tested anymore.
* All DNC bound computations in de.uni_kl.cs.disco.operations (delay, backlog, output, left-over) are called via a dispatcher, OperationDispatcher.java.
* Method cleanups in curve classes:
  - Renamed auto-generated method names that started with "isIs" or "isHas" and removed underscores from these method names.
  - Rate latencies: merged getRL_Property() into isRateLateny(); renamed setRL_Property() to setRateLateny().
  - Token buckets: merged getTB_Property() into isTokenBucket(); renamed setTB_Property() to setTokenBucket().
  - getDelayedInfiniteBurst_Property renamed to isDelayedInfiniteBurst.
* Comments and JavaDocs cleanups.

v2.4.0beta3 "Chimera" (2017-Sep-01)
-----------------------------------
Simplifications to the code structure for streamlined use. This work requires Java 8+ as it relies on static methods in interfaces.
* CalculatorConfig singleton: fix execution of all tests, run time back to previous level.
* Split Analysis.java into three parts:
  - The Analysis interface that also provides static methods for simple execution of analyses.
  - The abstract class AbstractAnalysis holds member variables for the network, the configurations and the results.
  All analyses in de.uni_kl.cs.disco.nc.analyses extend AbstractAnalysis and implement Analysis.
 * Split ArrivalBound.java into three parts:
  - The minimal ArrivalBound interface.
  - The abstract class ArrivalBoundDispatch that applies the configured arrival boundings.
  - The abstract class AbstractArrivalBound holds member variables for the network and the configurations.
  All arrival bounds in de.uni_kl.cs.disco.nc.arrivalbounds extend AbstractArrivalBound, all but the sink-tree version also implement ArrivalBound.