@@ -38,7 +38,7 @@ import de.uni_kl.cs.disco.nc.AnalysisConfig;
 import de.uni_kl.cs.disco.nc.ArrivalBound;
 import de.uni_kl.cs.disco.nc.ArrivalBoundDispatch;
 import de.uni_kl.cs.disco.nc.analyses.TotalFlowAnalysis;
-import de.uni_kl.cs.disco.nc.operations.OperationDispatcher;
+import de.uni_kl.cs.disco.nc.bounds.Bound;
 import de.uni_kl.cs.disco.network.*;
 import de.uni_kl.cs.disco.numbers.Num;
 
@@ -131,7 +131,7 @@ public class PbooArrivalBound_Concatenation extends AbstractArrivalBound impleme
             }
 
             // Calculate the left-over service curve for this single server
-            betas_lo_s = OperationDispatcher.lo_compute(configuration, server, alphas_xxfcaller_s);
+            betas_lo_s = Bound.lo_compute(configuration, server, alphas_xxfcaller_s);
 
             // Check if there's any service left on this path. If not, the set only contains
             // a null-service curve.
@@ -156,7 +156,7 @@ public class PbooArrivalBound_Concatenation extends AbstractArrivalBound impleme
         // by this call of computeArrivalBound
         Set<ArrivalCurve> alpha_xfcaller_src = ArrivalBoundDispatch.computeArrivalBounds(network, configuration,
                 common_subpath_src, f_xfcaller, flow_of_interest);
-        alphas_xfcaller = OperationDispatcher.ob_compute(configuration, alpha_xfcaller_src, common_subpath, betas_lo_subpath);
+        alphas_xfcaller = Bound.ob_compute(configuration, alpha_xfcaller_src, common_subpath, betas_lo_subpath);
 
         if (configuration.abConsiderTFANodeBacklog()) {
             Server last_hop_xtx = link.getSource();
