@@ -25,7 +25,7 @@
  *
  */
 
-package de.uni_kl.cs.disco.nc.operations;
+package de.uni_kl.cs.disco.nc.bounds;
 
 import ch.ethz.rtc.kernel.Curve;
 import de.uni_kl.cs.disco.curves.ArrivalCurve;
@@ -42,14 +42,14 @@ import de.uni_kl.cs.disco.numbers.Num;
 import java.util.ArrayList;
 import java.util.Set;
 
-public class OperationDispatcher {
-    private OperationDispatcher() {
+public class Bound {
+    private Bound() {
     }
 
     public static Num bl_derive(ArrivalCurve arrival_curve, ServiceCurve service_curve) {
         if (CalculatorConfig.getInstance().getOperationImpl().equals(CalculatorConfig.OperationImpl.DNC)
                 || CalculatorConfig.getInstance().getCurveImpl().equals(CalculatorConfig.CurveImpl.DNC)) {
-            return BacklogBound.derive(arrival_curve, service_curve);
+            return Backlog.derive(arrival_curve, service_curve);
         }
         //return BacklogBound.derive(arrival_curve,service_curve);
 
@@ -97,19 +97,19 @@ public class OperationDispatcher {
                                                    AnalysisConfig.ArrivalBoundMethod sink_tree_ab) throws Exception {
         if (CalculatorConfig.getInstance().getOperationImpl().equals(CalculatorConfig.OperationImpl.DNC)
                 || CalculatorConfig.getInstance().getCurveImpl().equals(CalculatorConfig.CurveImpl.DNC)) {
-            return BacklogBound.derivePmooSinkTreeTbRl(tree, root, sink_tree_ab);
+            return Backlog.derivePmooSinkTreeTbRl(tree, root, sink_tree_ab);
         }
         //TODO: not relevant for RTC?
-        return BacklogBound.derivePmooSinkTreeTbRl(tree, root, sink_tree_ab);
+        return Backlog.derivePmooSinkTreeTbRl(tree, root, sink_tree_ab);
     }
 
 
     public static Num db_deriveARB(ArrivalCurve arrival_curve, ServiceCurve service_curve) {
         if (CalculatorConfig.getInstance().getOperationImpl().equals(CalculatorConfig.OperationImpl.DNC)
                 || CalculatorConfig.getInstance().getCurveImpl().equals(CalculatorConfig.CurveImpl.DNC)) {
-            return DelayBound.deriveARB(arrival_curve, service_curve);
+            return Delay.deriveARB(arrival_curve, service_curve);
         }
-        return DelayBound.deriveARB(arrival_curve, service_curve);
+        return Delay.deriveARB(arrival_curve, service_curve);
 
         //TODO: doesn work?
         //return CurvePwAffine.getXIntersection(arrival_curve, service_curve);
@@ -126,9 +126,9 @@ public class OperationDispatcher {
     public static Num db_deriveFIFO(ArrivalCurve arrival_curve, ServiceCurve service_curve) {
         if (CalculatorConfig.getInstance().getOperationImpl().equals(CalculatorConfig.OperationImpl.DNC)
                 || CalculatorConfig.getInstance().getCurveImpl().equals(CalculatorConfig.CurveImpl.DNC)) {
-            return DelayBound.deriveFIFO(arrival_curve, service_curve);
+            return Delay.deriveFIFO(arrival_curve, service_curve);
         }
-        return DelayBound.deriveFIFO(arrival_curve, service_curve);
+        return Delay.deriveFIFO(arrival_curve, service_curve);
         //TODO: does not work
         //Curve a = ((Curve_MPARTC_PwAffine) arrival_curve).getRtc_curve();
         //Curve b = ((Curve_MPARTC_PwAffine) service_curve).getRtc_curve();
@@ -196,26 +196,26 @@ public class OperationDispatcher {
                                                Server server) throws Exception {
         if (CalculatorConfig.getInstance().getOperationImpl().equals(CalculatorConfig.OperationImpl.DNC)
                 || CalculatorConfig.getInstance().getCurveImpl().equals(CalculatorConfig.CurveImpl.DNC)) {
-            return OutputBound.compute(configuration, arrival_curves, server);
+            return Output.compute(configuration, arrival_curves, server);
         }
-        return OutputBound.compute(configuration, arrival_curves, server);
+        return Output.compute(configuration, arrival_curves, server);
     }
 
     public static Set<ArrivalCurve> ob_compute(AnalysisConfig configuration, Set<ArrivalCurve> arrival_curves,
                                                Server server, Set<ServiceCurve> betas_lo) throws Exception {
         if (CalculatorConfig.getInstance().getOperationImpl().equals(CalculatorConfig.OperationImpl.DNC)
                 || CalculatorConfig.getInstance().getCurveImpl().equals(CalculatorConfig.CurveImpl.DNC)) {
-            return OutputBound.compute(configuration, arrival_curves, server, betas_lo);
+            return Output.compute(configuration, arrival_curves, server, betas_lo);
         }
-        return OutputBound.compute(configuration, arrival_curves, server, betas_lo);
+        return Output.compute(configuration, arrival_curves, server, betas_lo);
     }
 
     public static Set<ArrivalCurve> ob_compute(AnalysisConfig configuration, Set<ArrivalCurve> arrival_curves, Path path,
                                                Set<ServiceCurve> betas_lo) throws Exception {
         if (CalculatorConfig.getInstance().getOperationImpl().equals(CalculatorConfig.OperationImpl.DNC)
                 || CalculatorConfig.getInstance().getCurveImpl().equals(CalculatorConfig.CurveImpl.DNC)) {
-            return OutputBound.compute(configuration, arrival_curves, path, betas_lo);
+            return Output.compute(configuration, arrival_curves, path, betas_lo);
         }
-        return OutputBound.compute(configuration, arrival_curves, path, betas_lo);
+        return Output.compute(configuration, arrival_curves, path, betas_lo);
     }
 }
